--- a/index.html
+++ b/index.html
@@ -104,28 +104,28 @@
       <div class="row">
         <div class="col-lg-6 pr-container">
           <div class="card h-100">
-            <img src="images/tindog_screenshot.png" class="card-top-img img-fluid mx-auto" alt="">
+            <img src="images/Blog.jpg" class="card-top-img img-fluid mx-auto" alt="">
             <div class="card-body">
-              <h3>TinDog</h3>
-              <p>A website I built using mostly the Bootstrap library.</p>
+              <h3>My Blog</h3>
+              <p>A website I built using the Django with uploading to the server AWS.</p>
             </div>
             <div class="footer-button">
-              <a class="btn btn-dark" href="https://natalyhalouchyk.github.io/tindog-site-/" target="_blank"><i class="fas fa-external-link-alt"></i> See Live</a>
-              <a class="btn btn-light" href="https://github.com/NatalyHalouchyk/tindog-site-/" target="_blank"><i class="fab fa-github"></i> See Code</a>
+              <a class="btn btn-dark" href="http://djangoblog-env-1.eba-fhq4rmmr.eu-north-1.elasticbeanstalk.com/" target="_blank"><i class="fas fa-external-link-alt"></i> See Live</a>
+              <a class="btn btn-light" href="https://github.com/Viachaslau/Blog" target="_blank"><i class="fab fa-github"></i> See Code</a>
             </div>
           </div>
         </div>
 
         <div class="col-lg-6 pr-container">
           <div class="card h-100">
-            <img src="images/signup_page_screenshot.jpg" class="card-top-img img-fluid mx-auto" alt="">
+            <img src="images/Autoservice.jpg" class="card-top-img img-fluid mx-auto" alt="">
             <div class="card-body">
-              <h3>Signup page</h3>
-              <p>A signup page that allows to collect submitted users' data sending them through API to the Mailchimp server. The page is built using Node.js with Express.</p>
+              <h3>Autoservice</h3>
+              <p>A autoservice page for commercial use that allows to collect data from clients sending them through RDS(AWS server) to the Django admin. The page is built using Bootstrap and PostgreSQL.</p>
             </div>
             <div class="footer-button">
-              <a class="btn btn-dark" href="https://still-ocean-62548.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i> See Live</a>
-              <a class="btn btn-light" href="https://github.com/NatalyHalouchyk/signup-page" target="_blank"><i class="fab fa-github"></i> See Code</a>
+              <a class="btn btn-dark" href="http://django-env.eba-fnpvudvh.eu-north-1.elasticbeanstalk.com/" target="_blank"><i class="fas fa-external-link-alt"></i> See Live</a>
+              <a class="btn btn-light" href="https://github.com/Viachaslau/Autoservice-django-" target="_blank"><i class="fab fa-github"></i> See Code</a>
             </div>
           </div>
         </div>
@@ -258,13 +258,13 @@
     <div class="container-fluid">
       <h2 class="section-heading">Contact me</h2>
 
-      <a class="link-dark" href="mailto:natallia.halouchyk@gmail.com" target="_blank"><i class="far fa-envelope"></i> natallia.halouchyk@gmail.com</a>
+      <a class="link-dark" href="mailto:halouchyk.viachaslau@gmail.com" target="_blank"><i class="far fa-envelope"></i> halouchyk.viachaslau@gmail.com</a>
 
-      <a class="link-dark" href="tel:+48.695.004.067"><i class="fas fa-phone"></i> +48 695 004 067</a>
+      <a class="link-dark" href="tel:+48.721.719.269"><i class="fas fa-phone"></i> +48 721 719 269</a>
 
-      <a class="link-dark" href="https://www.linkedin.com/in/natallia-halouchyk-5b600b225/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+      <a class="link-dark" href="https://www.linkedin.com/in/halouchyk/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
 
-      <a class="link-dark" href="https://github.com/NatalyHalouchyk" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+      <a class="link-dark" href="https://github.com/Viachaslau" target="_blank"><i class="fab fa-github"></i> GitHub</a>
 
     </div>
   </footer>
