--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
               <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#challenges">Challenges</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
@@ -58,9 +55,6 @@
           <h1>I'm Viachaslau</h1>
           <p>a back-end developer</p>
         </div>
-
-
-
     </div>
   </section>
 
@@ -130,87 +124,6 @@
           </div>
         </div>
 
-        <div class="col-lg-6 pr-container">
-          <div class="card h-100">
-            <img src="images/drum_kit_screenshot.jpg" class="card-top-img img-fluid mx-auto" alt="">
-            <div class="card-body">
-              <h3>Drum Kit</h3>
-              <p>A website that lets you turn into a drummer for a while just using your mouse or keyboard. Built with vanilla JavaScript</p>
-            </div>
-            <div class="footer-button">
-              <a class="btn btn-dark" href="https://natalyhalouchyk.github.io/Drum-Kit-Site/" target="_blank"><i class="fas fa-external-link-alt"></i> See Live</a>
-              <a class="btn btn-light" href="https://github.com/NatalyHalouchyk/Drum-Kit-Site" target="_blank"><i class="fab fa-github"></i> See Code</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-  <!-- Challenges -->
-
-  <section id="challenges">
-    <div class="container-fluid">
-
-      <h2 class="section-heading">Challenges and mini-projects</h2>
-      <p>In this section, the results of the problems I challenged myself with are presented. Here there are classic algorithmic challenges for web developers as well as common front-end pattens.</p>
-      <div class="row">
-        <div class="col-xl-4 col-lg-6 pr-container">
-          <div class="card h-100">
-            <img src="images/simon_game_screenshot.jpg" class="card-top-img img-fluid mx-auto" alt="">
-            <div class="card-body">
-              <h3>Simon Game</h3>
-              <p>A famous game of memory skill that makes you repeat the random sequences of flashing lights by pressing buttons in the correct order. Followed by sounds. Built using jQuery.</p>
-            </div>
-            <div class="footer-button">
-              <a class="btn btn-dark" href="https://natalyhalouchyk.github.io/simon-game/" target="_blank"><i class="fas fa-external-link-alt"></i> See Live</a>
-              <a class="btn btn-light" href="https://github.com/NatalyHalouchyk/simon-game#simon-game" target="_blank"><i class="fab fa-github"></i> See Code</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-xl-4 col-lg-6 pr-container">
-          <div class="card h-100">
-            <img src="images/faq_accordion_card.jpg" class="card-top-img img-fluid mx-auto" alt="">
-            <div class="card-body">
-              <h3>FAQ accordion card</h3>
-              <p>Just a FAQ accordion card. You press on the question and the proper answer is displayed. Built using vanilla JS.</p>
-            </div>
-            <div class="footer-button">
-              <a class="btn btn-dark" href="https://natalyhalouchyk.github.io/faq-accordion-card/" target="_blank"><i class="fas fa-external-link-alt"></i> See Live</a>
-              <a class="btn btn-light" href="https://github.com/NatalyHalouchyk/faq-accordion-card" target="_blank"><i class="fab fa-github"></i> See Code</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-xl-4 col-lg-6 pr-container">
-          <div class="card h-100">
-            <img src="images/intro_component_screenshot.jpg" class="card-top-img img-fluid mx-auto" alt="">
-            <div class="card-body">
-              <h3>Intro component with signup form</h3>
-              <p>A common singup form with client-side validation. It's built using Flexbox for the layout, vanilla JavaScript to validate whether fields are empty or not, plus Regex to validate an entered email.</p>
-            </div>
-            <div class="footer-button">
-              <a class="btn btn-dark" href="https://natalyhalouchyk.github.io/sign-up-form-with-client-side-validation/" target="_blank"><i class="fas fa-external-link-alt"></i> See Live</a>
-              <a class="btn btn-light" href="https://github.com/NatalyHalouchyk/sign-up-form-with-client-side-validation" target="_blank"><i class="fab fa-github"></i> See Code</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-xl-4 col-lg-6 pr-container">
-          <div class="card h-100">
-            <img src="images/dicee_game_screenshot.jpg" class="card-top-img img-fluid mx-auto" alt="">
-            <div class="card-body">
-              <h3>Dicee game</h3>
-              <p>A singup form with client-side validation. It's built using Flexbox for the layout, vanilla JavaScript to validate whether fields are empty or not, plus Regex to validate an entered email.</p>
-            </div>
-            <div class="footer-button">
-              <a class="btn btn-dark" href="https://natalyhalouchyk.github.io/dicee-game/" target="_blank"><i class="fas fa-external-link-alt"></i> See Live</a>
-              <a class="btn btn-light" href="https://github.com/NatalyHalouchyk/dicee-game" target="_blank"><i class="fab fa-github"></i> See Code</a>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </section>
@@ -224,6 +137,14 @@
 
       <h2 class="section-heading">Skills</h2>
       <div class="row skills-container">
+        <div class="col-lg-2 col-md-4 col-sm-6 pr-container">
+          <i class="fab fa-brands fa-python fa-4x"></i>
+          <h3>Python(Django)</h3>
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6 pr-container">
+          <i class="fab fa-brands fa-aws fa-4x"></i>
+          <h3>AWS</h3>
+        </div>
         <div class="col-lg-2 col-md-4 col-sm-6 pr-container">
           <i class="fab fa-html5 fa-4x"></i>
           <h3>HTML</h3>
@@ -239,13 +160,6 @@
         <div class="col-lg-2 col-md-4 col-sm-6 pr-container">
           <i class="fab fa-bootstrap fa-4x"></i>
           <h3>Bootstrap</h3>
-        </div>
-        <div class="col-lg-2 col-md-4 col-sm-6 pr-container">
-          <img src="images/jquery-icon.png" alt="jquery">
-        </div>
-        <div class="col-lg-2 col-md-4 col-sm-6 pr-container">
-          <i class="fab fa-node-js fa-4x"></i>
-          <h3>Node.js</h3>
         </div>
       </div>
     </div>
