Portfolio(server_python)

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
             <img src="images/Autoservice.jpg" class="card-top-img img-fluid mx-auto" alt="">
             <div class="card-body">
               <h3>Autoservice</h3>
-              <p>A autoservice page for commercial use that allows to collect data from clients sending them through RDS(AWS server) to the Django admin. The page is built using Bootstrap and PostgreSQL.</p>
+              <p>A autoservice page for commercial use that allows to collect data from clients sending them through to the administrator(Python server) to the Django admin. The page is built using Bootstrap and PostgreSQL.</p>
             </div>
             <div class="footer-button">
-              <a class="btn btn-dark" href="http://django-env.eba-fnpvudvh.eu-north-1.elasticbeanstalk.com/" target="_blank"><i class="fas fa-external-link-alt"></i> See Live</a>
+              <a class="btn btn-dark" href="http://viachaslauhalouchyk.pythonanywhere.com/" target="_blank"><i class="fas fa-external-link-alt"></i> See Live</a>
               <a class="btn btn-light" href="https://github.com/Viachaslau/Autoservice-django-" target="_blank"><i class="fab fa-github"></i> See Code</a>
             </div>
           </div>
