Portfolio(without_blog)

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
             <img src="images/Blog.jpg" class="card-top-img img-fluid mx-auto" alt="">
             <div class="card-body">
               <h3>My Blog</h3>
-              <p>A website I built using the Django with uploading to the server AWS.</p>
+              <p>A website I built using the Django.</p>
             </div>
             <div class="footer-button">
-              <a class="btn btn-dark" href="http://djangoblog-env-1.eba-fhq4rmmr.eu-north-1.elasticbeanstalk.com/" target="_blank"><i class="fas fa-external-link-alt"></i> See Live</a>
+              <!-- <a class="btn btn-dark" href="http://djangoblog-env-1.eba-fhq4rmmr.eu-north-1.elasticbeanstalk.com/" target="_blank"><i class="fas fa-external-link-alt"></i> See Live</a> -->
               <a class="btn btn-light" href="https://github.com/Viachaslau/Blog" target="_blank"><i class="fab fa-github"></i> See Code</a>
             </div>
           </div>
